WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91384
Web Inspector: native memory: fix instrumentation for string members
https://bugs.webkit.org/show_bug.cgi?id=91384
Summary
Web Inspector: native memory: fix instrumentation for string members
Ilya Tikhonovsky
Reported
2012-07-16 06:46:37 PDT
fix instrumentation for string members which were instrumented via addMember instead of addString patch to follow
Attachments
Patch
(4.24 KB, patch)
2012-07-16 06:53 PDT
,
Ilya Tikhonovsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2012-07-16 06:53:07 PDT
Created
attachment 152524
[details]
Patch
Ilya Tikhonovsky
Comment 2
2012-07-16 09:24:14 PDT
Committed
r122735
: <
http://trac.webkit.org/changeset/122735
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug