Web Inspector: native memory: fix instrumentation for string members https://bugs.webkit.org/show_bug.cgi?id=91384

Reviewed by Pavel Feldman.

It was possible to report a string member via addMember instead of addString.
This patch is fixing the problem and adding a link time guard.

Covered by existing inspector performance tests infrastructure.

* dom/ElementAttributeData.h:
(WebCore::ElementAttributeData::reportMemoryUsage):
* dom/MemoryInstrumentation.h:
(WebCore):
(WebCore::MemoryClassInfo::addString):
* dom/QualifiedName.h:
(WebCore::QualifiedName::QualifiedNameImpl::reportMemoryUsage):

Canonical link: https://commits.webkit.org/109206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122735 268f45cc-cd09-0410-ab3c-d52691b4dbfc